iOS: click event doesn't get dispatched when there is a click event listener on ShadowRoot https://bugs.webkit.org/show_bug.cgi?id=218923

Reviewed by Wenson Hsieh.

The bug was caused by WebPage::commitPotentialTap falsely treating ShadowRoot as an invalid tap target
because it doesn't have a renderer. Fixed the bug by checking the shadow host's renderer instead
much like http://commits.webkit.org/r246404 for display: contents.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::commitPotentialTap): Fixed the bug.

* LayoutTests/fast/shadow-dom/click-eventlistener-on-shadow-root-expected.txt: Added.
* LayoutTests/fast/shadow-dom/click-eventlistener-on-shadow-root.html: Added.

Canonical link: https://commits.webkit.org/252107@main